[gd_scene load_steps=25 format=2]

[ext_resource path="res://Images/Tilemaps/Boundary1.png" type="Texture" id=1]
[ext_resource path="res://Images/Tilemaps/Carpet2.png" type="Texture" id=2]
[ext_resource path="res://Scenes/Characters/Team/BattlePotionMaker.tscn" type="PackedScene" id=3]
[ext_resource path="res://Images/Tilemaps/Boundary2.png" type="Texture" id=4]
[ext_resource path="res://Images/Tilemaps/Boundary3.png" type="Texture" id=5]
[ext_resource path="res://Images/Tilemaps/Carpet4.png" type="Texture" id=6]
[ext_resource path="res://Images/Tilemaps/Carpet3.png" type="Texture" id=7]
[ext_resource path="res://Images/Projectiles/ProjectileShooter.png" type="Texture" id=8]
[ext_resource path="res://Images/Projectiles/ProjectileShooterLine.png" type="Texture" id=9]
[ext_resource path="res://Scenes/Characters/Enemy/BattleEnemies/ShootNode.tscn" type="PackedScene" id=10]
[ext_resource path="res://Scripts/Characters/EnemyScript/BattleScripts/ProjectileShooterScript.gd" type="Script" id=11]
[ext_resource path="res://Images/Tilemaps/Carpet1.png" type="Texture" id=12]
[ext_resource path="res://Scripts/Main/BattleSceneScript.gd" type="Script" id=14]

[sub_resource type="ConvexPolygonShape2D" id=4]
points = PoolVector2Array( 0, 0, 8, 0, 8, 8, 0, 8 )

[sub_resource type="TileSet" id=1]
0/name = "Boundary1.png 0"
0/texture = ExtResource( 1 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 8, 8 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "Boundary2.png 1"
1/texture = ExtResource( 4 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 0, 0, 8, 8 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0
2/name = "Boundary3.png 2"
2/texture = ExtResource( 5 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 0, 0, 8, 8 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape = SubResource( 4 )
2/shape_one_way = false
2/shape_one_way_margin = 1.0
2/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 4 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
2/z_index = 0
3/name = "Carpet1.png 3"
3/texture = ExtResource( 12 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 0, 0, 8, 8 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shape_offset = Vector2( 0, 0 )
3/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
3/shape_one_way = false
3/shape_one_way_margin = 0.0
3/shapes = [  ]
3/z_index = 0
4/name = "Carpet2.png 4"
4/texture = ExtResource( 2 )
4/tex_offset = Vector2( 0, 0 )
4/modulate = Color( 1, 1, 1, 1 )
4/region = Rect2( 0, 0, 8, 8 )
4/tile_mode = 0
4/occluder_offset = Vector2( 0, 0 )
4/navigation_offset = Vector2( 0, 0 )
4/shape_offset = Vector2( 0, 0 )
4/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
4/shape_one_way = false
4/shape_one_way_margin = 0.0
4/shapes = [  ]
4/z_index = 0
5/name = "Carpet3.png 5"
5/texture = ExtResource( 7 )
5/tex_offset = Vector2( 0, 0 )
5/modulate = Color( 1, 1, 1, 1 )
5/region = Rect2( 0, 0, 8, 8 )
5/tile_mode = 0
5/occluder_offset = Vector2( 0, 0 )
5/navigation_offset = Vector2( 0, 0 )
5/shape_offset = Vector2( 0, 0 )
5/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
5/shape_one_way = false
5/shape_one_way_margin = 0.0
5/shapes = [  ]
5/z_index = 0
6/name = "Carpet4.png 6"
6/texture = ExtResource( 6 )
6/tex_offset = Vector2( 0, 0 )
6/modulate = Color( 1, 1, 1, 1 )
6/region = Rect2( 0, 0, 8, 8 )
6/tile_mode = 0
6/occluder_offset = Vector2( 0, 0 )
6/navigation_offset = Vector2( 0, 0 )
6/shape_offset = Vector2( 0, 0 )
6/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
6/shape_one_way = false
6/shape_one_way_margin = 0.0
6/shapes = [  ]
6/z_index = 0

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "ShootLeadUp"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.694352, 1.48 ), Vector2( 1.55593, 0.685055 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("..")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.2 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "shoot"
} ]
}

[sub_resource type="Animation" id=6]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "ShootLeadUp"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.694352, 1.48 ), Vector2( 1.55593, 0.685055 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("..")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.2 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "shoot"
} ]
}

[sub_resource type="Animation" id=8]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=9]
resource_name = "ShootLeadUp"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.694352, 1.48 ), Vector2( 1.55593, 0.685055 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("..")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.2 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "shoot"
} ]
}

[sub_resource type="Animation" id=10]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=11]
resource_name = "ShootLeadUp"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.694352, 1.48 ), Vector2( 1.55593, 0.685055 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("..")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.2 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "shoot"
} ]
}

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 10, 91.25 )

[node name="BattleScene" type="Node2D"]
position = Vector2( 180, 136 )
script = ExtResource( 14 )

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource( 1 )
cell_size = Vector2( 8, 8 )
show_collision = true
format = 1
tile_data = PoolIntArray( -655370, -1073741822, 0, -655369, -1073741822, 0, -655368, -1073741822, 0, -655367, -1073741822, 0, -655366, -1073741822, 0, -655365, -1073741822, 0, -655364, -1073741822, 0, -655363, -1073741822, 0, -655362, -1073741822, 0, -655361, -1073741822, 0, -720896, -1073741822, 0, -720895, -1073741822, 0, -720894, -1073741822, 0, -720893, -1073741822, 0, -720892, -1073741822, 0, -720891, -1073741822, 0, -720890, -1073741822, 0, -720889, -1073741822, 0, -720888, -1073741822, 0, -720887, -1073741822, 0, -589835, -1073741822, 0, -589834, -1073741822, 0, -589833, 1, 0, -589832, -1610612736, 0, -589831, -1610612736, 0, -589830, -1610612736, 0, -589829, -1610612736, 0, -589828, -1610612736, 0, -589827, -1610612736, 0, -589826, -1610612736, 0, -589825, -1610612736, 0, -655360, -1610612736, 0, -655359, -1610612736, 0, -655358, -1610612736, 0, -655357, -1610612736, 0, -655356, -1610612736, 0, -655355, -1610612736, 0, -655354, -1610612736, 0, -655353, -1610612736, 0, -655352, -1610612735, 0, -655351, -1073741822, 0, -655350, -1073741822, 0, -524300, -1073741822, 0, -524299, -1073741822, 0, -524298, 1, 0, -524296, 3, 0, -524295, 4, 0, -524294, 4, 0, -524293, 4, 0, -524292, 4, 0, -524291, 4, 0, -524290, 4, 0, -524289, 4, 0, -589824, 4, 0, -589823, 4, 0, -589822, 4, 0, -589821, 4, 0, -589820, 4, 0, -589819, 4, 0, -589818, 4, 0, -589817, -1610612733, 0, -589815, -1610612735, 0, -589814, -1073741822, 0, -589813, -1073741822, 0, -458764, -1073741822, 0, -458763, 1, 0, -458761, 3, 0, -458760, 5, 0, -458759, 6, 0, -458758, 6, 0, -458757, 6, 0, -458756, 6, 0, -458755, 6, 0, -458754, 6, 0, -458753, 6, 0, -524288, 6, 0, -524287, 6, 0, -524286, 6, 0, -524285, 6, 0, -524284, 6, 0, -524283, 6, 0, -524282, 6, 0, -524281, -1610612731, 0, -524280, -1610612733, 0, -524278, -1610612735, 0, -524277, -1073741822, 0, -393228, -1073741822, 0, -393227, 0, 0, -393226, 3, 0, -393225, 5, 0, -393224, 6, 0, -393223, 6, 0, -393222, 6, 0, -393221, 6, 0, -393220, 6, 0, -393219, 6, 0, -393218, 6, 0, -393217, 6, 0, -458752, 6, 0, -458751, 6, 0, -458750, 6, 0, -458749, 6, 0, -458748, 6, 0, -458747, 6, 0, -458746, 6, 0, -458745, 6, 0, -458744, -1610612731, 0, -458743, -1610612733, 0, -458742, 1610612736, 0, -458741, -1073741822, 0, -327692, -1073741822, 0, -327691, 0, 0, -327690, -1073741820, 0, -327689, 6, 0, -327688, 6, 0, -327687, 6, 0, -327686, 6, 0, -327685, 6, 0, -327684, 6, 0, -327683, 6, 0, -327682, 6, 0, -327681, 6, 0, -393216, 6, 0, -393215, 6, 0, -393214, 6, 0, -393213, 6, 0, -393212, 6, 0, -393211, 6, 0, -393210, 6, 0, -393209, 6, 0, -393208, 6, 0, -393207, -1610612732, 0, -393206, 1610612736, 0, -393205, -1073741822, 0, -262156, -1073741822, 0, -262155, 0, 0, -262154, -1073741820, 0, -262153, 6, 0, -262152, 6, 0, -262151, 6, 0, -262150, 6, 0, -262149, 6, 0, -262148, 6, 0, -262147, 6, 0, -262146, 6, 0, -262145, 6, 0, -327680, 6, 0, -327679, 6, 0, -327678, 6, 0, -327677, 6, 0, -327676, 6, 0, -327675, 6, 0, -327674, 6, 0, -327673, 6, 0, -327672, 6, 0, -327671, -1610612732, 0, -327670, 1610612736, 0, -327669, -1073741822, 0, -196620, -1073741822, 0, -196619, 0, 0, -196618, -1073741820, 0, -196617, 6, 0, -196616, 6, 0, -196615, 6, 0, -196614, 6, 0, -196613, 6, 0, -196612, 6, 0, -196611, 6, 0, -196610, 6, 0, -196609, 6, 0, -262144, 6, 0, -262143, 6, 0, -262142, 6, 0, -262141, 6, 0, -262140, 6, 0, -262139, 6, 0, -262138, 6, 0, -262137, 6, 0, -262136, 6, 0, -262135, -1610612732, 0, -262134, 1610612736, 0, -262133, -1073741822, 0, -131084, -1073741822, 0, -131083, 0, 0, -131082, -1073741820, 0, -131081, 6, 0, -131080, 6, 0, -131079, 6, 0, -131078, 6, 0, -131077, 6, 0, -131076, 6, 0, -131075, 6, 0, -131074, 6, 0, -131073, 6, 0, -196608, 6, 0, -196607, 6, 0, -196606, 6, 0, -196605, 6, 0, -196604, 6, 0, -196603, 6, 0, -196602, 6, 0, -196601, 6, 0, -196600, 6, 0, -196599, -1610612732, 0, -196598, 1610612736, 0, -196597, -1073741822, 0, -65548, -1073741822, 0, -65547, 0, 0, -65546, -1073741820, 0, -65545, 6, 0, -65544, 6, 0, -65543, 6, 0, -65542, 6, 0, -65541, 6, 0, -65540, 6, 0, -65539, 6, 0, -65538, 6, 0, -65537, 6, 0, -131072, 6, 0, -131071, 6, 0, -131070, 6, 0, -131069, 6, 0, -131068, 6, 0, -131067, 6, 0, -131066, 6, 0, -131065, 6, 0, -131064, 6, 0, -131063, -1610612732, 0, -131062, 1610612736, 0, -131061, -1073741822, 0, -12, -1073741822, 0, -11, 0, 0, -10, -1073741820, 0, -9, 6, 0, -8, 6, 0, -7, 6, 0, -6, 6, 0, -5, 6, 0, -4, 6, 0, -3, 6, 0, -2, 6, 0, -1, 6, 0, -65536, 6, 0, -65535, 6, 0, -65534, 6, 0, -65533, 6, 0, -65532, 6, 0, -65531, 6, 0, -65530, 6, 0, -65529, 6, 0, -65528, 6, 0, -65527, -1610612732, 0, -65526, 1610612736, 0, -65525, -1073741822, 0, 65524, -1073741822, 0, 65525, 0, 0, 65526, -1073741820, 0, 65527, 6, 0, 65528, 6, 0, 65529, 6, 0, 65530, 6, 0, 65531, 6, 0, 65532, 6, 0, 65533, 6, 0, 65534, 6, 0, 65535, 6, 0, 0, 6, 0, 1, 6, 0, 2, 6, 0, 3, 6, 0, 4, 6, 0, 5, 6, 0, 6, 6, 0, 7, 6, 0, 8, 6, 0, 9, -1610612732, 0, 10, 1610612736, 0, 11, -1073741822, 0, 131060, -1073741822, 0, 131061, 0, 0, 131062, -1073741820, 0, 131063, 6, 0, 131064, 6, 0, 131065, 6, 0, 131066, 6, 0, 131067, 6, 0, 131068, 6, 0, 131069, 6, 0, 131070, 6, 0, 131071, 6, 0, 65536, 6, 0, 65537, 6, 0, 65538, 6, 0, 65539, 6, 0, 65540, 6, 0, 65541, 6, 0, 65542, 6, 0, 65543, 6, 0, 65544, 6, 0, 65545, -1610612732, 0, 65546, 1610612736, 0, 65547, -1073741822, 0, 196596, -1073741822, 0, 196597, 0, 0, 196598, -1073741820, 0, 196599, 6, 0, 196600, 6, 0, 196601, 6, 0, 196602, 6, 0, 196603, 6, 0, 196604, 6, 0, 196605, 6, 0, 196606, 6, 0, 196607, 6, 0, 131072, 6, 0, 131073, 6, 0, 131074, 6, 0, 131075, 6, 0, 131076, 6, 0, 131077, 6, 0, 131078, 6, 0, 131079, 6, 0, 131080, 6, 0, 131081, -1610612732, 0, 131082, 1610612736, 0, 131083, -1073741822, 0, 262132, -1073741822, 0, 262133, 0, 0, 262134, -1073741820, 0, 262135, 6, 0, 262136, 6, 0, 262137, 6, 0, 262138, 6, 0, 262139, 6, 0, 262140, 6, 0, 262141, 6, 0, 262142, 6, 0, 262143, 6, 0, 196608, 6, 0, 196609, 6, 0, 196610, 6, 0, 196611, 6, 0, 196612, 6, 0, 196613, 6, 0, 196614, 6, 0, 196615, 6, 0, 196616, 6, 0, 196617, -1610612732, 0, 196618, 1610612736, 0, 196619, -1073741822, 0, 327668, -1073741822, 0, 327669, 0, 0, 327670, -1073741820, 0, 327671, 6, 0, 327672, 6, 0, 327673, 6, 0, 327674, 6, 0, 327675, 6, 0, 327676, 6, 0, 327677, 6, 0, 327678, 6, 0, 327679, 6, 0, 262144, 6, 0, 262145, 6, 0, 262146, 6, 0, 262147, 6, 0, 262148, 6, 0, 262149, 6, 0, 262150, 6, 0, 262151, 6, 0, 262152, 6, 0, 262153, -1610612732, 0, 262154, 1610612736, 0, 262155, -1073741822, 0, 393204, -1073741822, 0, 393205, 0, 0, 393206, -1073741820, 0, 393207, 6, 0, 393208, 6, 0, 393209, 6, 0, 393210, 6, 0, 393211, 6, 0, 393212, 6, 0, 393213, 6, 0, 393214, 6, 0, 393215, 6, 0, 327680, 6, 0, 327681, 6, 0, 327682, 6, 0, 327683, 6, 0, 327684, 6, 0, 327685, 6, 0, 327686, 6, 0, 327687, 6, 0, 327688, 6, 0, 327689, -1610612732, 0, 327690, 1610612736, 0, 327691, -1073741822, 0, 458740, -1073741822, 0, 458741, 0, 0, 458742, -1073741821, 0, 458743, -1073741819, 0, 458744, 6, 0, 458745, 6, 0, 458746, 6, 0, 458747, 6, 0, 458748, 6, 0, 458749, 6, 0, 458750, 6, 0, 458751, 6, 0, 393216, 6, 0, 393217, 6, 0, 393218, 6, 0, 393219, 6, 0, 393220, 6, 0, 393221, 6, 0, 393222, 6, 0, 393223, 6, 0, 393224, 1610612741, 0, 393225, 1610612739, 0, 393226, 1610612736, 0, 393227, -1073741822, 0, 524276, -1073741822, 0, 524277, -1073741823, 0, 524279, -1073741821, 0, 524280, -1073741819, 0, 524281, 6, 0, 524282, 6, 0, 524283, 6, 0, 524284, 6, 0, 524285, 6, 0, 524286, 6, 0, 524287, 6, 0, 458752, 6, 0, 458753, 6, 0, 458754, 6, 0, 458755, 6, 0, 458756, 6, 0, 458757, 6, 0, 458758, 6, 0, 458759, 1610612741, 0, 458760, 1610612739, 0, 458762, 1610612737, 0, 458763, -1073741822, 0, 589812, -1073741822, 0, 589813, -1073741822, 0, 589814, -1073741823, 0, 589816, -1073741821, 0, 589817, 1610612740, 0, 589818, 1610612740, 0, 589819, 1610612740, 0, 589820, 1610612740, 0, 589821, 1610612740, 0, 589822, 1610612740, 0, 589823, 1610612740, 0, 524288, 1610612740, 0, 524289, 1610612740, 0, 524290, 1610612740, 0, 524291, 1610612740, 0, 524292, 1610612740, 0, 524293, 1610612740, 0, 524294, 1610612740, 0, 524295, 1610612739, 0, 524297, 1610612737, 0, 524298, -1073741822, 0, 524299, -1073741822, 0, 655349, -1073741822, 0, 655350, -1073741822, 0, 655351, -1073741823, 0, 655352, -1073741824, 0, 655353, -1073741824, 0, 655354, -1073741824, 0, 655355, -1073741824, 0, 655356, -1073741824, 0, 655357, -1073741824, 0, 655358, -1073741824, 0, 655359, -1073741824, 0, 589824, -1073741824, 0, 589825, -1073741824, 0, 589826, -1073741824, 0, 589827, -1073741824, 0, 589828, -1073741824, 0, 589829, -1073741824, 0, 589830, -1073741824, 0, 589831, -1073741824, 0, 589832, 1610612737, 0, 589833, -1073741822, 0, 589834, -1073741822, 0, 720886, -1073741822, 0, 720887, -1073741822, 0, 720888, -1073741822, 0, 720889, -1073741822, 0, 720890, -1073741822, 0, 720891, -1073741822, 0, 720892, -1073741822, 0, 720893, -1073741822, 0, 720894, -1073741822, 0, 720895, -1073741822, 0, 655360, -1073741822, 0, 655361, -1073741822, 0, 655362, -1073741822, 0, 655363, -1073741822, 0, 655364, -1073741822, 0, 655365, -1073741822, 0, 655366, -1073741822, 0, 655367, -1073741822, 0, 655368, -1073741822, 0, 655369, -1073741822, 0 )

[node name="ProjectileShooter" type="Node2D" parent="."]
script = ExtResource( 11 )

[node name="Timer" type="Timer" parent="ProjectileShooter"]

[node name="ShootNode" parent="ProjectileShooter" instance=ExtResource( 10 )]
show_behind_parent = true
position = Vector2( 79, 0 )
lookingAtPlayer = true

[node name="ProjectileShooterLine" type="Sprite" parent="ProjectileShooter/ShootNode"]
modulate = Color( 1, 1, 1, 0.509804 )
show_behind_parent = true
position = Vector2( 0.206776, 0.106571 )
rotation = 4.71239
texture = ExtResource( 9 )
offset = Vector2( -0.106604, 18.2068 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="ProjectileShooter/ShootNode"]

[node name="ProjectileShooter" type="Sprite" parent="ProjectileShooter/ShootNode"]
texture = ExtResource( 8 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="ProjectileShooter/ShootNode/ProjectileShooter"]
anims/RESET = SubResource( 2 )
anims/ShootLeadUp = SubResource( 3 )

[node name="ProjectileShooter2" type="Node2D" parent="."]
rotation = 3.14159
script = ExtResource( 11 )
rotationSpeed = -0.5

[node name="Timer" type="Timer" parent="ProjectileShooter2"]

[node name="ShootNode" parent="ProjectileShooter2" instance=ExtResource( 10 )]
show_behind_parent = true
position = Vector2( 79, 0 )
lookingAtPlayer = true

[node name="ProjectileShooterLine" type="Sprite" parent="ProjectileShooter2/ShootNode"]
modulate = Color( 1, 1, 1, 0.509804 )
show_behind_parent = true
position = Vector2( 0.206776, 0.106571 )
rotation = 4.71239
texture = ExtResource( 9 )
offset = Vector2( -0.106604, 18.2068 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="ProjectileShooter2/ShootNode"]

[node name="ProjectileShooter" type="Sprite" parent="ProjectileShooter2/ShootNode"]
texture = ExtResource( 8 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="ProjectileShooter2/ShootNode/ProjectileShooter"]
anims/RESET = SubResource( 6 )
anims/ShootLeadUp = SubResource( 7 )

[node name="ProjectileShooter3" type="Node2D" parent="."]
rotation = 1.5708
script = ExtResource( 11 )
rotationSpeed = -0.3

[node name="Timer" type="Timer" parent="ProjectileShooter3"]

[node name="ShootNode" parent="ProjectileShooter3" instance=ExtResource( 10 )]
show_behind_parent = true
position = Vector2( 79, 0 )
lookingAtPlayer = true

[node name="ProjectileShooterLine" type="Sprite" parent="ProjectileShooter3/ShootNode"]
modulate = Color( 1, 1, 1, 0.509804 )
show_behind_parent = true
position = Vector2( 0.206776, 0.106571 )
rotation = 4.71239
texture = ExtResource( 9 )
offset = Vector2( -0.106604, 18.2068 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="ProjectileShooter3/ShootNode"]

[node name="ProjectileShooter" type="Sprite" parent="ProjectileShooter3/ShootNode"]
texture = ExtResource( 8 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="ProjectileShooter3/ShootNode/ProjectileShooter"]
anims/RESET = SubResource( 8 )
anims/ShootLeadUp = SubResource( 9 )

[node name="ProjectileShooter4" type="Node2D" parent="."]
rotation = 4.71239
script = ExtResource( 11 )
rotationSpeed = 0.3

[node name="Timer" type="Timer" parent="ProjectileShooter4"]

[node name="ShootNode" parent="ProjectileShooter4" instance=ExtResource( 10 )]
show_behind_parent = true
position = Vector2( 79, 0 )
lookingAtPlayer = true

[node name="ProjectileShooterLine" type="Sprite" parent="ProjectileShooter4/ShootNode"]
modulate = Color( 1, 1, 1, 0.509804 )
show_behind_parent = true
position = Vector2( 0.206776, 0.106571 )
rotation = 4.71239
texture = ExtResource( 9 )
offset = Vector2( -0.106604, 18.2068 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="ProjectileShooter4/ShootNode"]

[node name="ProjectileShooter" type="Sprite" parent="ProjectileShooter4/ShootNode"]
texture = ExtResource( 8 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="ProjectileShooter4/ShootNode/ProjectileShooter"]
anims/RESET = SubResource( 10 )
anims/ShootLeadUp = SubResource( 11 )

[node name="BattlePotionMaker" parent="." instance=ExtResource( 3 )]
position = Vector2( -15, 12 )

[node name="BattleCollisionSides" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="BattleCollisionSides"]
position = Vector2( 99, 1.75 )
shape = SubResource( 5 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="BattleCollisionSides"]
position = Vector2( -98, 0 )
shape = SubResource( 5 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="BattleCollisionSides"]
position = Vector2( 1, -90 )
rotation = 1.5708
shape = SubResource( 5 )

[node name="CollisionShape2D4" type="CollisionShape2D" parent="BattleCollisionSides"]
position = Vector2( 1, 90 )
rotation = 1.5708
shape = SubResource( 5 )

[connection signal="timeout" from="ProjectileShooter/Timer" to="ProjectileShooter" method="_on_Timer_timeout"]
[connection signal="timeout" from="ProjectileShooter2/Timer" to="ProjectileShooter2" method="_on_Timer_timeout"]
[connection signal="timeout" from="ProjectileShooter3/Timer" to="ProjectileShooter3" method="_on_Timer_timeout"]
[connection signal="timeout" from="ProjectileShooter4/Timer" to="ProjectileShooter4" method="_on_Timer_timeout"]
